# cali

./: README.md  pyproject.toml
notebooks/: running_cali.ipynb
src/cali/: __init__.py  cli.py  data_models.py  viz.py
