[project]
name = "cali"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ben Evans", email = "Benjamin.Evans@ioz.ac.uk" }
]
requires-python = ">=3.10"
dependencies = [
    "rich>=15.0.0",
    "ultralytics>=8.4.41",
]

[project.scripts]
cali = "cali:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
